# krx-alpha-platform

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: architecture.md  data-design.md  operations-runbook-ko.md  operations-runbook.md  portfolio-review-guide.md  results-example.md  scoring-and-risk.md  security.md  troubleshooting.md  usage.md
docs/adr/: 0001-mvp-scope.md
docs/data_cards/: dart_data_v0.md  investor_flow_data_v0.md  macro_data_v0.md  price_data_v0.md
src/krx_alpha/: cli.py
tests/: test_api_health.py  test_auto_screener.py  test_backtest_report.py  test_cli_helpers.py  test_daily_job_scheduler.py  test_daily_pipeline.py  test_daily_report.py  test_dart_collector.py  test_dart_disclosure_events.py  test_dart_financial_features.py  test_dashboard_data_loader.py  test_data_quality.py  test_drift_monitoring.py  test_experiment_tracker.py  test_investor_flow_collector.py  test_investor_flow_features.py  test_kis_paper.py  test_kis_paper_candidates.py  test_macro_collector.py  test_macro_features.py  test_market_regime.py  test_ml_report.py  test_ml_training_dataset.py  test_news_collector.py  test_news_sentiment.py  test_operations_health.py  test_paper_trading.py  test_paper_trading_report.py  test_price_collector.py  test_price_features.py  test_price_processor.py  test_price_scorer.py  test_probability_baseline.py  test_settings.py  test_signal_engine.py  test_simple_backtester.py  test_storage.py  test_telegram_notifier.py  test_universe_pipeline.py  test_universe_registry.py  (+2 more)
(+75 files in other folders)
