[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "krx-alpha-platform"
version = "0.1.0"
description = "Explainable Korean stock investment decision support platform"
requires-python = ">=3.11,<3.13"
dependencies = [
    "loguru>=0.7",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
    "rich>=13.7",
    "typer>=0.12",
]

[project.optional-dependencies]
data = [
    "apscheduler>=3.10",
    "beautifulsoup4>=4.12",
    "duckdb>=1.0",
    "finance-datareader>=0.9",
    "httpx>=0.27",
    "numpy>=1.26",
    "pandas>=2.2",
    "pandera>=0.19",
    "pyarrow>=15.0",
    "pykrx>=1.0",
    "requests>=2.31",
    "requests-cache>=1.2",
    "SQLAlchemy>=2.0",
    "ta>=0.11",
    "tenacity>=8.2",
    "yfinance>=0.2",
]
ml = [
    "evidently>=0.4",
    "lightgbm>=4.3",
    "mlflow>=2.12",
    "scikit-learn>=1.4",
    "shap>=0.45",
    "xgboost>=2.0",
]
dashboard = [
    "plotly>=5.22",
    "streamlit>=1.34",
]
ops = [
    "python-telegram-bot>=21.0",
]
dev = [
    "black>=24.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
